fixes animation iphone issue

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -4,43 +4,25 @@
 @import "font-awesome";
 @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200);
 
-.fade-in {
-    opacity:0;  /* make things invisible upon start */
-    animation:fadeIn ease-in 1; /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-
-    animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-
-    animation-duration: 1s;
-    animation-delay: 1.5s
-}
 
 .fade-in-long {
-    opacity:0;  /* make things invisible upon start */
-    animation:fadeIn ease-in 1; /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+    -webkit-transform-style: preserve-3d;
+    animation-duration: 3.5s;
+    animation-delay: 3.5s;
+    visibility: visible !important;
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 3s; /* Firefox < 16 */
+    -ms-animation: fadein 3s; /* Internet Explorer */
+    -o-animation: fadein 3s; /* Opera < 12.1 */
+    animation: fadein 3s;
+    }
 
-    animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
 
-    animation-duration: 1.5s;
-    animation-delay: 3.5s
-}
-
-.slideRight{
-	animation-name: slideRight;
-	-webkit-animation-name: slideRight;
-
-	animation-duration: 1s;
-	-webkit-animation-duration: 1s;
-
-	animation-timing-function: ease-in-out;
-	-webkit-animation-timing-function: ease-in-out;
-
-	visibility: visible !important;
-}
 
 // make all images responsive by default
 body{
   animation-fill-mode:forwards;
-  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
   font-family: 'Yanone Kaffeesatz', sans-serif;
   font-weight: 400;
   height: 100vh;
@@ -166,20 +148,31 @@ section {
     font-size: 22px;
   }
 
+  @keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
 
-//   .loaded header {
-//   -webkit-transform: none;
-//   -moz-transform: none;
-//   -ms-transform: none;
-//   -o-transform: none;
-//   transform: none;
-//   opacity: 1;
-// }
-// .loaded #content {
-//   -webkit-transform: none;
-//   -moz-transform: none;
-//   -ms-transform: none;
-//   -o-transform: none;
-//   transform: none;
-//   opacity: 1;
-// }
+  /* Firefox < 16 */
+  @-moz-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+
+  /* Safari, Chrome and Opera > 12.1 */
+  @-webkit-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+
+  /* Internet Explorer */
+  @-ms-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+
+  /* Opera < 12.1 */
+  @-o-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
